--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 <header>
 	<p>SQL Query Visualizer</p>
 </header>
-<div class="query-input">test 123
+<div class="query-input-div">
 	<textarea id="queryInput" placeholder="Write your query here!"></textarea>
-	<button onclick="sendQuery()">Query</button>
+	<button class="query-button" onclick="sendQuery()">Query</button>
 </div>
 
 
