--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,29 @@
-.query-input{
+body{
+    #display: flex;
+}
+
+.query-input-div{
+    display:flex;
     background-color: gray;
     width:70vw;
+    margin-left:15vw;
+}
 
+#queryInput{
+    height:20vh;
+    width: 95%;
+    margin-left:0.3vw;
+    margin-right:0.3vw;
+    margin-top:0.3vh;
+    margin-bottom:0.3vh;
+    padding-top:1vh;
+    padding-left:1vh;
+    resize: none;
+}
+
+.query-button{
+    height: 5vh;
+    width: 10%;
+    margin-right:0.3vh;
+    align-self:center;
 }
