--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 		
 		console.log("hello")
 		const query = document.getElementById("queryInput").value;
-		const test = await fetch("/test",{
+		const test = await fetch("/query",{
 		method: "POST",
 		headers: { "Content_type": "application/json"},
 		body: JSON.stringify({query: query})
