--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
   <style>
-	  #cy {width: 100%; height: 100vh;}
   </style>
 </head>
 
@@ -20,12 +19,12 @@
 	<button class="query-button" onclick="sendQuery()">Query</button>
 </div>
 
-<div id="cy"></div>
+<div id="cy" class="query-display-div"></div>
 
 <script>
 	cytoscape({
 		container: document.getElementById('cy'),
-		elements: [{data: { id: 'a', label: 'Node A'}}],
+		elements: [],
 		style: [{ selector: 'node',style:{'label':'data(label)'}}],
 		layout: {name: 'grid'}
 	});
@@ -38,7 +37,7 @@
 	async function sendQuery() {
 
 		
-		console.log("hello")
+		//console.log("hello")
 		const query = document.getElementById("queryInput").value;
 		const test = await fetch("/query",{
 		method: "POST",
@@ -46,7 +45,18 @@
 		body: JSON.stringify({query: query})
 		});
 		const data = await test.json();
-		console.log(data)
+		//console.log(data)
+		const tables = data.tables;
+		//console.log(tables)
+		const cytoTables = tables.map((table,idx) => ({
+			data:{ id: `n${idx}`, label: table.name}
+		}));
+		cytoscape({
+			container: document.getElementById('cy'),
+			elements: [...cytoTables],
+			style: [{ selector: 'node',style:{'label':'data(label)'}}],
+			layout: {name: 'grid'}
+		});
 	}	
 
 </script>
